name:           DuDuHoX
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Thiago Negri

executable DuDuHoX
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   ansi-terminal,
                   transformers,
                   bytestring,
                   free
  ghc-options:     -Wall
  other-modules:   
                   DuDuHoX.World,
                   Main,
                   DuDuHoX.Game,
                   DuDuHoX.World.Builder,
                   DuDuHoX.Util.Bresenham,
                   DuDuHoX.Console.World,
                   DuDuHoX.Console.Game,
                   DuDuHoX.Console.Interface,
                   DuDuHoX.World.Base,
                   DuDuHoX.Console,
                   DuDuHoX.Console.Types,
                   DuDuHoX.Console.IORunner

