name:           DuDuHoX
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Thiago Negri

executable DuDuHoX
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   ansi-terminal,
                   transformers,
                   bytestring,
                   free,
                   GLFW,
                   OpenGL,
                   directory
  ghc-options:     -Wall -threaded -O2
  other-modules:   
                   Main,
                   DuDuHoX.Game,
                   DuDuHoX.World.Builder,
                   DuDuHoX.Util.Bresenham,
                   DuDuHoX.Console.Game,
                   DuDuHoX.Console.Interface,
                   DuDuHoX.World.Base,
                   DuDuHoX.Console.Types,
                   DuDuHoX.Console.IORunner,
                   DuDuHoX.World.Types,
                   DuDuHoX.World.Visible

